Change the body style to avoid overwrapping footer content and body content

--- a/static/style.css
+++ b/static/style.css
@@ -233,7 +233,7 @@ table {
   }
 
   .plan_body {
-    padding: 120px 100px 120px 100px;
+    padding: 120px 100px 150px 100px;
     min-height: 100vh;
   }
 }
